// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AddressItem - snapshots AddressItem known contact from address book with icons 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "marginRight": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 18,
              "fontWeight": "600",
              "opacity": 1,
            }
          }
        >
          pepe
        </Text>
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 18,
              "fontWeight": "600",
              "opacity": 1,
            }
          }
        >
          u123456..._______
        </Text>
      </View>
    </View>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "marginLeft": 10,
        "opacity": 1,
      }
    }
  >
    <
      color="#18bd18"
      icon={
        {
          "icon": [
            576,
            512,
            [
              61913,
            ],
            "f1d8",
            "M536.4-26.3c9.8-3.5 20.6-1 28 6.3s9.8 18.2 6.3 28l-178 496.9c-5 13.9-18.1 23.1-32.8 23.1-14.2 0-27-8.6-32.3-21.7l-64.2-158c-4.5-11-2.5-23.6 5.2-32.6l94.5-112.4c5.1-6.1 4.7-15-.9-20.6s-14.6-6-20.6-.9L229.2 276.1c-9.1 7.6-21.6 9.6-32.6 5.2L38.1 216.8c-13.1-5.3-21.7-18.1-21.7-32.3 0-14.7 9.2-27.8 23.1-32.8l496.9-178z",
          ],
          "iconName": "paper-plane",
          "prefix": "fas",
        }
      }
      size={30}
      style={
        {
          "marginTop": 3,
        }
      }
    />
  </View>
</View>
`;

exports[`AddressItem - snapshots AddressItem oneLine mode 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "marginRight": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 18,
              "fontWeight": "600",
              "opacity": 1,
            }
          }
        >
          u1abc12...6abc123
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AddressItem - snapshots AddressItem privacy mode 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "marginRight": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 18,
              "fontWeight": "600",
              "opacity": 1,
            }
          }
        >
          u1abc12...6abc123
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`AddressItem - snapshots AddressItem unknown address, no contact 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "column",
        "marginRight": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          {
            "display": "flex",
            "flexDirection": "column",
            "flexWrap": "wrap",
          }
        }
      >
        <Text
          style={
            {
              "color": "#c3c3c3",
              "fontSize": 18,
              "fontWeight": "600",
              "opacity": 1,
            }
          }
        >
          u1abc12...6abc123
        </Text>
      </View>
    </View>
  </View>
</View>
`;
